test/spec_vectors/type-subtyping/fail/module_67.wat
(module (type $a (sub (array (ref none)))) (type $b (sub $a (array (ref any)))))